Made tables scroll if the overflow their parent. Made tour scroll indicator fit better. Fixed analytics script load order.

--- a/main/static/css/custom_ckeditor.css
+++ b/main/static/css/custom_ckeditor.css
@@ -162,10 +162,6 @@ img.angle-right {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-#contents table {
-    max-width: 100%;
-}
-
 #contents table:not(.styled-table) thead tr {
     background-color: var(--accent-foreground);
     color: var(--accent-background);
